# 3va

./: .dockerignore  .gitignore  .gitleaks.toml  3va-lock.json  ANDROID_FALLBACK_HANDOFF.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  deny.toml  package.json  scratch.rs
.cargo/: audit.toml
.cargo-husky/hooks/: pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: android-backport-check.yml  benchmark.yml  ci.yml  codeql.yml  force-release-v2.0.0.yml  pwn_request.yml  release-distribution.yml  release.yml  security-audit.yml  security.yml
.semgrep/: semgrep.yml
.semgrep/rules/: 3va-security.yml  filesystem.yml  unsafe-rust.yml
Formula/: 3va.rb
bench/: 3va.config.json  README.md  run.sh  server.js
bucket/: 3va.json
crates/bundler/: Cargo.toml  README.md  scratch.rs
crates/bundler/src/: generator.rs  lib.rs  resolver.rs  tree_shaker.rs
crates/bundler/tests/: bundler_execution.rs  bundler_integration.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: accessibility.rs  main.rs  proc.rs
crates/cli/tests/: pm_commands.rs
crates/config/: Cargo.toml
crates/config/src/: env_override.rs  lib.rs  loader.rs  schema.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs  task_queue.rs  timer.rs
crates/core/tests/: runtime_integration.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/src/: dsa.rs  hkdf.rs  kem.rs  lamport.rs  lib.rs
crates/firewall/: Cargo.toml
crates/firewall/src/: lib.rs
crates/js/: Cargo.toml  README.md
crates/js/src/: async_context.rs  esm.rs  inspector.rs  lib.rs  profiler.rs  rejection_tracker.rs  transpiler.rs
crates/js/src/builtins/: buffer.rs  child_process.rs  console.rs  crypto.rs  dgram.rs  event_source.rs  fetch.rs  ffi.rs  fs.rs  ftp.rs  grpc.rs  http_server.rs  imap.rs  irc.rs  mod.rs  modules.rs  mqtt.rs  napi.rs  os_info.rs  pop3.rs  process.rs  sqlite.rs  ssh.rs  tcp.rs  timers.rs  v8_compat.rs  web_globals.rs  webrtc.rs  websocket.rs  worker_threads.rs  zlib.rs
crates/js/tests/: async_hooks_module.rs  blob_file_module.rs  compat_fixes.rs  compat_priority.rs  compat_sprint1.rs  crypto_module.rs  express_jwt.rs  ffi_module.rs  framework_compat.rs  fs_module.rs  fs_watch.rs  ftp_module.rs  grpc_module.rs  http_server.rs  imap_module.rs  irc_module.rs  module_resolution_fixes.rs  mqtt_module.rs  net_server.rs  node_compat_v21.rs  permission_enforcement.rs  pipeline.rs  pop3_module.rs  sqlite_module.rs  ssh_module.rs  stream_module.rs  system_modules.rs  url_globals.rs  web_compat.rs  web_globals.rs  webrtc_module.rs  websocket_module.rs  wintercg_globals.rs  zlib_module.rs
crates/permissions/: Cargo.toml  README.md
crates/permissions/src/: audit.rs  capability.rs  enforcement.rs  lib.rs  preset.rs  sandbox.rs  scope.rs
crates/permissions/tests/security/: capability_bypass.rs  dos_prevention.rs  mod.rs  path_traversal.rs  sandbox_escape.rs
crates/pm/: Cargo.toml  README.md
crates/pm/src/: auditor.rs  fetcher.rs  lib.rs  lockfile.rs  malware_scanner.rs  manifest.rs  npmrc.rs  package_lock.rs  pnpm_lock.rs  resolver.rs  secrets.rs  semver.rs  signature_verifier.rs  store.rs  workspace.rs  workspace_v2.rs  yarn_lock.rs
crates/pm/tests/: security_integration.rs  virtual_store.rs
crates/test/: Cargo.toml  README.md
crates/test/src/: coverage.rs  framework.rs  lib.rs  matchers.rs  runner.rs  security.rs
crates/test/tests/: runner_integration.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: engine.rs  lib.rs
crates/wasm/tests/: wasi_integration.rs
docs/: 00-indice-general.md  CHANGELOG.md  LICENSE  SECURITY.md  changelog-2026-05-29.md  changelog-2026-06-01.md  changelog-2026-06-03.md  changelog-2026-06-05.md  compatibility.txt  error.txt
docs/01-intro/: 01-resumen-ejecutivo.md  02-alcance.md  03-definiciones.md
docs/02-arquitectura/: 01-arquitectura-general.md  02-diseno-componentes.md  03-interfaces.md  04-execucion-del-script.md
docs/03-cli/: 01-interfaz-linea-comandos.md  02-comandos.md  03-opciones.md  04-ejemplos.md
docs/04-core/: 01-event-loop.md  02-modulo-system.md  03-globals.md  04-process.md  05-threading.md
docs/05-js-engine/: 01-quickjs-integration.md  01-v8-integration.md  02-modulo-loader.md  03-polyfills.md  04-web-apis.md  05-node-compat.md
docs/06-permissions/: 01-capability-model.md  02-enforcement.md  03-sandboxing.md  04-audit.md  05-interactive-prompts.md  06-package-json-permissions.md
docs/07-pm/: 01-especificacion-pm.md  02-resolucion.md  03-sandboxing.md  04-lockfile.md  05-global-dedup.md
docs/08-bundler/: 01-arquitectura.md  01-especificacion-bundler.md  02-arquitectura.md  02-transpilation.md  03-transpilation.md  03-tree-shaking.md  04-code-splitting.md  04-tree-shaking.md  05-code-splitting.md
docs/09-testing/: 01-especificacion-tests.md  02-matchers.md  03-coverage.md  03-snapshots.md  04-watch-mode.md  05-scripts.md
docs/10-roadmap/: 01-integration-phase.md
docs/10-security/: 01-static-analysis.md  02-malware-scanner.md  03-secrets-detection.md  04-fuzzing.md  05-post-quantum.md  06-osv-audit.md  07-http-performance.md  08-firewall.md
docs/11-api/: 01-js-api.md  02-interna-api.md  03-error-codes.md
docs/11-guidelines/: 01-ai-coding-guidelines.md
docs/12-roadmap/: 01-roadmap.md  02-lts-criteria.md  03-release-process.md  04-compatibility.md  05-v2-roadmap.md  06-pm-feature-parity.md  07-pm-phase-c-security-review.md
docs/13-v2/: 00-overview.md  01-profiler.md  02-node-compat-v2.md  03-repl-plugins.md  04-workspace-v2.md  05-config-file.md  06-security-v2.md  07-migration.md  08-testing-v2.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_js_esm_resolver.rs  fuzz_js_import_meta.rs  fuzz_js_transpiler.rs  fuzz_permission_sandbox.rs  fuzz_pm_resolver.rs  fuzz_target_1.rs
scripts/: dev-setup.sh  integration_tests.sh  security_verify.sh  update-version.sh
supply-chain/: config.toml
tmp_test/: test_es2024.js  test_exports.js
wiki/: Architecture.md  CLI-Reference.md  Contributing.md  Home.md  Installation.md  Permissions.md  Security.md
(+5 files in other folders)
