[workspace]
resolver = "2"
members = [
    "crates/*",
    "crates/bundler",
    "crates/crypto",
    "crates/test",
    "crates/wasm",
]

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
v8 = "150.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
url = "2.5"
base64 = "0.22"
sha2 = { version = "0.10", features = ["oid"] }
sha1 = { version = "0.10", features = ["oid"] }
hmac = "0.12"
rand = "0.8"
pbkdf2 = "0.12"
scrypt = "0.11"
tempfile = "3.8"
ureq = { version = "2", features = ["json"] }
tungstenite = { version = "0.24", features = ["native-tls"] }
flate2 = "1.0"
brotli = "7"
tar = "0.4"
wasmtime = "36.0"
wasmtime-wasi = "36.0"
wat = "1.0"
ml-kem = { version = "0.3", features = ["getrandom"] }
ml-dsa = { version = "0.1", features = ["getrandom"] }
aes-gcm = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
ctr = "0.9"
# "vendored" compiles OpenSSL from source, ensuring cargo install works on any OS
# without requiring pre-installed OpenSSL dev headers (especially important for 
# Termux, cross-compilation, and restricted environments).
native-tls = { version = "0.2", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
rsa = "0.9"
p256 = { version = "0.13", features = ["pkcs8", "ecdsa"] }
p384 = { version = "0.13", features = ["pkcs8", "ecdsa"] }
md-5 = "0.10"
notify = { version = "6", features = ["macos_fsevent"] }
rusqlite = { version = "0.32", features = ["bundled"] }
inferno = { version = "0.12", default-features = false, features = ["nameattr"] }
hickory-resolver = "0.26"
socket2 = "0.6"
russh = { version = "0.62", features = ["ring"] }
russh-sftp = "2.3"
webrtc = "0.20.0-rc.1"
async-trait = "0.1"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[patch.crates-io]
inferno   = { path = "vendor/inferno" }
quick-xml = { path = "vendor/quick-xml" }
