[package]
name = "vvva_bundler"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
regex-lite = "0.1"
notify = "6.1"
vvva_pm = { path = "../pm" }
oxc_allocator = "0.132.0"
oxc_parser = "0.132.0"
oxc_ast = "0.132.0"
oxc_codegen = "0.132.0"
oxc_span = "0.132.0"

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
vvva_js = { path = "../js" }
vvva_permissions = { path = "../permissions" }