[package]
name = "vvva_bundler"
version = "2.0.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "TypeScript/JavaScript bundler and hot-module-reload dev server for the 3va runtime (oxc-based)"
repository = "https://github.com/OdinoCano/3va"
homepage = "https://github.com/OdinoCano/3va"
keywords = ["bundler", "typescript", "hmr", "dev-server", "3va"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
regex-lite = "0.1"
notify = "6.1"
vvva_pm = { version = "2.0.3", path = "../pm" }
oxc_allocator = "0.132.0"
oxc_parser = "0.132.0"
oxc_ast = "0.132.0"
oxc_codegen = "0.132.0"
oxc_semantic = "0.132.0"
oxc_transformer = "0.132.0"
oxc_span = "0.132.0"

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
vvva_js = { version = "2.0.3", path = "../js" }
vvva_permissions = { version = "2.0.3", path = "../permissions" }