[package]
name = "vvva_cli"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[[bin]]
name = "3va"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
notify = "6.1"
serde_json.workspace = true
vvva_core = { path = "../core" }
vvva_pm = { path = "../pm" }
vvva_js = { path = "../js" }
vvva_permissions = { path = "../permissions" }
vvva_bundler = { version = "0.1.0", path = "../bundler" }
vvva_test = { version = "0.1.0", path = "../test" }
vvva_wasm = { path = "../wasm" }

[dev-dependencies]
tempfile.workspace = true
