[package]
name = "vvva_cli"
version = "2.0.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "3va — secure-by-default JavaScript/TypeScript runtime built on QuickJS with post-quantum crypto and capability-based sandboxing"
repository = "https://github.com/OdinoCano/3va"
homepage = "https://github.com/OdinoCano/3va"
keywords = ["javascript", "typescript", "runtime", "sandbox", "3va"]
categories = ["command-line-utilities"]

[[bin]]
name = "3va"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
notify = "6.1"
serde_json.workspace = true
serde.workspace = true
libc = "0.2"
vvva_core = { version = "2.0.4", path = "../core" }
vvva_config = { version = "2.0.4", path = "../config" }
vvva_firewall = { version = "2.0.4", path = "../firewall" }
vvva_pm = { version = "2.0.4", path = "../pm" }
vvva_js = { version = "2.0.4", path = "../js" }
vvva_permissions = { version = "2.0.4", path = "../permissions" }
vvva_bundler = { version = "2.0.4", path = "../bundler" }
vvva_test = { version = "2.0.4", path = "../test" }
vvva_wasm = { version = "2.0.4", path = "../wasm" }
tempfile.workspace = true
ureq.workspace = true
base64.workspace = true
flate2.workspace = true
tar.workspace = true

[[test]]
name = "pm_commands"
path = "tests/pm_commands.rs"

[dev-dependencies]
tempfile.workspace = true
flate2.workspace = true
tar.workspace = true
serde_json.workspace = true
