[package]
name = "vvva_config"
version = "2.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Project configuration schema and loader for the 3va JavaScript runtime (3va.config.toml / .json)"
repository = "https://github.com/OdinoCano/3va"
homepage = "https://github.com/OdinoCano/3va"
keywords = ["config", "runtime", "javascript", "3va"]
categories = ["config"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
regex-lite = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
