[package]
name = "vvva_crypto"
version = "1.0.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
sha2 = { workspace = true }
hmac = "0.12"
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = "1.8"
ml-kem = { workspace = true }
ml-dsa = { workspace = true }

[dev-dependencies]
