[package]
name = "vvva_crypto"
version = "2.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Post-quantum cryptography (ML-KEM-768, ML-DSA-65), hybrid TLS, and Node.js-compatible crypto for the 3va runtime"
repository = "https://github.com/OdinoCano/3va"
homepage = "https://github.com/OdinoCano/3va"
keywords = ["crypto", "ml-kem", "ml-dsa", "post-quantum", "3va"]
categories = ["cryptography"]

[dependencies]
sha2 = { workspace = true }
hmac = "0.12"
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = "1.8"
ml-kem = { workspace = true }
ml-dsa = { workspace = true }

[dev-dependencies]
