[package]
name = "vvva_firewall"
version = "2.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "HTTP firewall for the 3va runtime — rate limiting, token bucket, Slowloris/RUDY protection, IP auto-blocking"
repository = "https://github.com/OdinoCano/3va"
homepage = "https://github.com/OdinoCano/3va"
keywords = ["firewall", "rate-limiting", "ddos", "http", "3va"]
categories = ["network-programming"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
