[package]
name = "vvva_js"
version = "2.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "V8-based JavaScript/TypeScript engine for the 3va runtime — ESM, TypeScript, async/await, NAPI, CDP inspector, profiler"
repository = "https://github.com/OdinoCano/3va"
homepage = "https://github.com/OdinoCano/3va"
keywords = ["javascript", "typescript", "v8", "runtime", "3va"]
categories = ["api-bindings"]

[dev-dependencies]
tempfile.workspace = true
tungstenite = { workspace = true }
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
vvva_firewall = { version = "2.4.0", path = "../firewall" }
rand10 = { package = "rand", version = "0.10" }

[[test]]
name = "fs_watch"
path = "tests/fs_watch.rs"

[[test]]
name = "compat_sprint1"
path = "tests/compat_sprint1.rs"

[[test]]
name = "compat_fixes"
path = "tests/compat_fixes.rs"

[[test]]
name = "crypto_module"
path = "tests/crypto_module.rs"

[[test]]
name = "permission_enforcement"
path = "tests/permission_enforcement.rs"

[[test]]
name = "pipeline"
path = "tests/pipeline.rs"

[[test]]
name = "websocket_module"
path = "tests/websocket_module.rs"

[[test]]
name = "stream_module"
path = "tests/stream_module.rs"

[[test]]
name = "blob_file_module"
path = "tests/blob_file_module.rs"

[[test]]
name = "http_server"
path = "tests/http_server.rs"

[[test]]
name = "module_resolution_fixes"
path = "tests/module_resolution_fixes.rs"

[[test]]
name = "framework_compat"
path = "tests/framework_compat.rs"

[[test]]
name = "net_server"
path = "tests/net_server.rs"

[[test]]
name = "system_modules"
path = "tests/system_modules.rs"

[[test]]
name = "zlib_module"
path = "tests/zlib_module.rs"

[[test]]
name = "fs_module"
path = "tests/fs_module.rs"

[[test]]
name = "ffi_module"
path = "tests/ffi_module.rs"

[[test]]
name = "url_globals"
path = "tests/url_globals.rs"

[[test]]
name = "web_globals"
path = "tests/web_globals.rs"

[[test]]
name = "wintercg_globals"
path = "tests/wintercg_globals.rs"

[[test]]
name = "express_jwt"
path = "tests/express_jwt.rs"

[[test]]
name = "async_hooks_module"
path = "tests/async_hooks_module.rs"

[[test]]
name = "compat_priority"
path = "tests/compat_priority.rs"

[[test]]
name = "web_compat"
path = "tests/web_compat.rs"

[[test]]
name = "sqlite_module"
path = "tests/sqlite_module.rs"

[[test]]
name = "imap_module"
path = "tests/imap_module.rs"

[dependencies]
v8.workspace = true
anyhow.workspace = true
sha2 = { workspace = true }
sha1 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
pbkdf2 = { workspace = true }
scrypt = { workspace = true }
vvva_core = { version = "2.4.0", path = "../core" }
vvva_crypto = { version = "2.4.0", path = "../crypto" }
vvva_firewall = { version = "2.4.0", path = "../firewall" }
vvva_permissions = { version = "2.4.0", path = "../permissions" }
hex = "0.4"
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
tungstenite.workspace = true
tokio.workspace = true
url.workspace = true
flate2.workspace = true
brotli.workspace = true
aes-gcm = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
ctr = { workspace = true }
native-tls = { workspace = true }
rsa = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
md-5 = { workspace = true }
notify = { workspace = true }
inferno = { workspace = true }
rusqlite = { workspace = true }
hickory-resolver = { workspace = true }
socket2 = { workspace = true }
russh = { workspace = true }
russh-sftp = { workspace = true }
webrtc = { workspace = true }
async-trait = "0.1"
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
http = "1"

libc = "0.2"
libloading = "0.8"
libffi = "3.2"
oxc_transformer = "0.132"
oxc_codegen = "0.132"
oxc_parser = "0.132"
oxc_span = "0.132"
oxc_allocator = "0.132"
oxc_ast = "0.132"
oxc_semantic = "0.132"
