[package]
name = "vvva_permissions"
version = "2.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Capability-based permission sandbox for the 3va JavaScript runtime — deny-by-default with interactive prompts and audit logging"
repository = "https://github.com/OdinoCano/3va"
homepage = "https://github.com/OdinoCano/3va"
keywords = ["permissions", "sandbox", "security", "capabilities", "runtime"]
categories = ["security"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
url.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile.workspace = true

[[test]]
name = "security"
path = "tests/security/mod.rs"
