[package]
name = "vvva_pm"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
vvva_permissions = { path = "../permissions" }
reqwest = { version = "0.12", features = ["json"] }
sha2.workspace = true
base64.workspace = true
hex = "0.4"
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
tempfile.workspace = true
