[package]
name = "vvva_pm"
version = "1.0.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
vvva_permissions = { path = "../permissions" }
reqwest = { version = "0.12", features = ["json"] }
sha2.workspace = true
base64.workspace = true
hex = "0.4"
regex = "1.12"
flate2 = "1.0"
tar = "0.4"
oxc_allocator = "0.132"
oxc_parser = "0.132"
oxc_ast = "0.132"
oxc_ast_visit = "0.132"
oxc_span = "0.132"

[dev-dependencies]
tempfile.workspace = true
