[package]
name = "vvva_pm"
version = "2.0.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Content-addressable package manager for the 3va runtime — npm-compatible resolver, virtual store, lockfile, OSV audit"
repository = "https://github.com/OdinoCano/3va"
homepage = "https://github.com/OdinoCano/3va"
keywords = ["package-manager", "npm", "lockfile", "audit", "3va"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
vvva_permissions = { version = "2.0.3", path = "../permissions" }
reqwest = { version = "0.12", features = ["json", "gzip"] }
sha2.workspace = true
base64.workspace = true
hex = "0.4"
regex = "1.12"
flate2 = "1.0"
tar = "0.4"
oxc_allocator = "0.132"
oxc_parser = "0.132"
oxc_ast = "0.132"
oxc_ast_visit = "0.132"
oxc_span = "0.132"

[dev-dependencies]
tempfile.workspace = true
