[package]
name = "vvva_test"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
vvva_js = { path = "../js" }
vvva_permissions = { path = "../permissions" }
tokio.workspace = true
notify = "8.0"
lazy_static = "1.4"