[package]
name = "vvva_test"
version = "2.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Test framework and runner for .test.js/.test.ts files in the 3va JavaScript runtime"
repository = "https://github.com/OdinoCano/3va"
homepage = "https://github.com/OdinoCano/3va"
keywords = ["testing", "javascript", "typescript", "runner", "3va"]
categories = ["development-tools::testing"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
vvva_js = { version = "2.1.0", path = "../js" }
vvva_permissions = { version = "2.1.0", path = "../permissions" }
tokio.workspace = true
lazy_static = "1.4"
oxc_allocator = "0.132"
oxc_parser = "0.132"
oxc_span = "0.132"
oxc_ast = "0.132"
oxc_ast_visit = "0.132"

[dev-dependencies]
tempfile = "3"
