[package]
name = "vvva_wasm"
version = "2.0.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "WebAssembly / WASI execution engine for the 3va runtime (Wasmtime-backed, capability-sandboxed)"
repository = "https://github.com/OdinoCano/3va"
homepage = "https://github.com/OdinoCano/3va"
keywords = ["wasm", "wasi", "wasmtime", "sandbox", "3va"]
categories = ["wasm"]

[dependencies]
anyhow.workspace = true
tokio.workspace = true
vvva_permissions = { version = "2.0.3", path = "../permissions" }
wasmtime = { workspace = true, features = ["async"] }
wasmtime-wasi = { workspace = true }
wat = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
